.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for MyFirstCPPProject
Info: Nothing to build for MyFirstCPPProject
17:27:27 **** Incremental Build of configuration Debug for project MyFirstCPPProject ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\MyFirstCPPProject.o" "..\\src\\MyFirstCPPProject.cpp" 
..\src\MyFirstCPPProject.cpp:12:11: error: '::main' must return 'int'
 void main() {
           ^
17:27:46 **** Incremental Build of configuration Debug for project MyFirstCPPProject ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\MyFirstCPPProject.o" "..\\src\\MyFirstCPPProject.cpp" 
g++ -o MyFirstCPPProject.exe "src\\MyFirstCPPProject.o" 
